Replaced FindNotesTask with FindNotesService, decoupling by this way the activity and the service, to be able to receive the results when device is rotated. Some more improvements related with device rotation.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".NoteListActivity" />
         </activity>
+        <service
+            android:name=".task.FindNotesService"
+            android:exported="false"/>
     </application>
 
 </manifest>
